style.css
* {
    box-sizing: border-box;
}

body {
    margin: 0;
}

.header {
    text-align: center;
    margin: 20px 0;
}

h3 {
    margin-bottom: 0;
}

.date {
    display: inline-block;
    color: white;
    background: #800e0e;
    width: auto;
    padding: 10px 15px;
    margin: 10px 0;
    border-radius: 5px;
}

.container {
    margin: 20px auto;
    text-align: center;
    overflow: auto;
}

.row {
    display: flex;
}

textarea {
    margin: 0;
    width: 100%;
    height: 100%;
    resize: none;
    border: none;
    padding: 10px;
}

.hour,
.todo,
.save {
    height: 100px;
    border-top: 1px solid #3d3737;
}

.bottom-line {
    border-bottom: 1px solid #3d3737;
}

.hour {
    text-align: right;
    padding: 5px;
    background: #ffffff;
    color: #3d3737;
}

.todo {
    padding: 0;
}

.save {
    color: white;
    text-align: center;
    background: #800e0e;
    line-height: 100px;
    cursor: pointer;
}

.icon {
    margin: auto;
}

.fa-save {
    font-size: 1.5em;
}

button {
    display: inline-block;
    color: white;
    background: #800e0e;
    width: auto;
    padding: 10px 15px;
    margin: 20px 0;
}

@media screen and (max-width: 580px) {
    .fa-save {
        font-size: 1.5em;
    }

    .save {
        border-radius: 0;
    }
}

